--- a/app/src/main/res/layout/exo_player_view.xml
+++ b/app/src/main/res/layout/exo_player_view.xml
@@ -46,10 +46,9 @@
 
     <androidx.media3.ui.SubtitleView
         android:id="@id/exo_subtitles"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="bottom"
-        android:layout_marginBottom="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top"
         android:layout_weight="1"
         android:adjustViewBounds="true">
 
