--- a/app/src/main/res/layout/activity_player_settings.xml
+++ b/app/src/main/res/layout/activity_player_settings.xml
@@ -1190,6 +1190,28 @@
             </com.google.android.material.materialswitch.MaterialSwitch>
 
             <com.google.android.material.materialswitch.MaterialSwitch
+                android:id="@+id/playerSettingsRotate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:checked="true"
+                android:drawableStart="@drawable/ic_round_screen_rotation_alt_24"
+                android:drawablePadding="16dp"
+                android:elegantTextHeight="true"
+                android:fontFamily="@font/poppins_bold"
+                android:minHeight="64dp"
+                android:paddingHorizontal="32dp"
+                android:text="@string/show_rotate_button"
+                android:textAlignment="viewStart"
+                android:textColor="@color/bg_opp"
+                app:cornerRadius="0dp"
+                app:drawableTint="?attr/colorPrimary"
+                app:showText="false"
+                app:thumbTint="@color/button_switch_track">
+
+            </com.google.android.material.materialswitch.MaterialSwitch>
+
+            <com.google.android.material.materialswitch.MaterialSwitch
                 android:id="@+id/playerSettingsInternalCast"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -1211,18 +1233,17 @@
             </com.google.android.material.materialswitch.MaterialSwitch>
 
             <com.google.android.material.materialswitch.MaterialSwitch
-                android:id="@+id/playerSettingsRotate"
+                android:id="@+id/playerSettingsAdditionalCodec"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:checked="true"
-                android:drawableStart="@drawable/ic_round_screen_rotation_alt_24"
+                android:checked="false"
+                android:drawableStart="@drawable/cast_warning"
                 android:drawablePadding="16dp"
                 android:elegantTextHeight="true"
                 android:fontFamily="@font/poppins_bold"
                 android:minHeight="64dp"
                 android:paddingHorizontal="32dp"
-                android:text="@string/show_rotate_button"
+                android:text="@string/use_additional_codec"
                 android:textAlignment="viewStart"
                 android:textColor="@color/bg_opp"
                 app:cornerRadius="0dp"
