--- a/app/src/main/res/layout/activity_player_settings.xml
+++ b/app/src/main/res/layout/activity_player_settings.xml
@@ -1236,8 +1236,8 @@
                 android:id="@+id/playerSettingsAdditionalCodec"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:checked="false"
-                android:drawableStart="@drawable/cast_warning"
+                android:checked="true"
+                android:drawableStart="@drawable/ic_round_high_quality_24"
                 android:drawablePadding="16dp"
                 android:elegantTextHeight="true"
                 android:fontFamily="@font/poppins_bold"
