--- a/app/src/main/res/layout/exo_player_view.xml
+++ b/app/src/main/res/layout/exo_player_view.xml
@@ -59,6 +59,7 @@
         android:layout_gravity="center"
         android:background="#80000000"
         android:padding="8dp"
+        android:text=""
         android:adjustViewBounds="true"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
