--- a/app/src/main/res/layout/exo_player_view.xml
+++ b/app/src/main/res/layout/exo_player_view.xml
@@ -54,16 +54,17 @@
 
     <TextView
         android:id="@+id/customSubtitleView"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_gravity="center_horizontal|bottom"
         android:background="#80000000"
         android:padding="8dp"
         android:text=""
         android:adjustViewBounds="true"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
-        android:visibility="visible" />
+        android:layout_weight="1"
+        android:visibility="gone" />
 
     </androidx.media3.ui.SubtitleView>
 
