--- a/app/src/main/res/drawable/shine.xml
+++ b/app/src/main/res/drawable/shine.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="@android:color/holo_yellow_light"
-        android:endColor="@android:color/white"
+        android:startColor="#FFFF00"
+        android:endColor="#FFFFFF"
         android:angle="45" />
-    <corners android:radius="8dp" />
+    <corners android:radius="8dp"/>
 </shape>
