--- a/app/src/main/res/layout/exo_player_view.xml
+++ b/app/src/main/res/layout/exo_player_view.xml
@@ -52,17 +52,13 @@
         android:layout_weight="1"
         android:adjustViewBounds="true">
 
-    <TextView
+    <ani.dantotsu.others.Xubtitle
         android:id="@+id/customSubtitleView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|bottom"
-        android:background="#80000000"
         android:padding="8dp"
-        android:text=""
         android:adjustViewBounds="true"
-        android:textColor="#FFFFFF"
-        android:textSize="16sp"
         android:layout_weight="1"
         android:visibility="gone" />
 
