--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -5,7 +5,7 @@
         <attr name="appWidgetRadius" format="dimension" />
     </declare-styleable>
     <declare-styleable name="Xubtitle">
-        <attr name="outlineColor" format="color" />
+        <attr name="outlineStrokeColor" format="color" />
         <attr name="outlineThickness" format="dimension" />
     </declare-styleable>
 </resources>
