--- a/app/src/main/res/layout/activity_player_settings.xml
+++ b/app/src/main/res/layout/activity_player_settings.xml
@@ -225,6 +225,26 @@
                     app:showText="false"
                     app:thumbTint="@color/button_switch_track" />
 
+                <com.google.android.material.materialswitch.MaterialSwitch
+                    android:id="@+id/subTextSwitch"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:checked="true"
+                    android:drawableStart="@drawable/ic_round_subtitles_24"
+                    android:drawablePadding="16dp"
+                    android:elegantTextHeight="false"
+                    android:fontFamily="@font/poppins_bold"
+                    android:minHeight="64dp"
+                    android:paddingHorizontal="32dp"
+                    android:text="@string/subtitle_toggle"
+                    android:textAlignment="viewStart"
+                    android:textColor="@color/bg_opp"
+                    app:cornerRadius="0dp"
+                    app:drawableTint="?attr/colorPrimary"
+                    app:showText="false"
+                    app:thumbTint="@color/button_switch_track" />
+
                 <Button
                     android:id="@+id/videoSubLanguage"
                     style="@style/Widget.Material3.Button.TextButton"
