--- a/app/src/main/res/layout/activity_player_settings.xml
+++ b/app/src/main/res/layout/activity_player_settings.xml
@@ -401,6 +401,16 @@
 
                 </com.google.android.material.slider.Slider>
 
+                <com.google.android.material.slider.Slider
+                    android:id="@+id/videoSubStroke"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="32dp"
+                    android:valueFrom="0"
+                    android:valueTo="20">
+
+                </com.google.android.material.slider.Slider>
+
                 <Button
                     android:id="@+id/videoSubFont"
                     style="@style/Widget.Material3.Button.TextButton"
