--- a/app/src/main/res/layout/activity_player_settings.xml
+++ b/app/src/main/res/layout/activity_player_settings.xml
@@ -407,6 +407,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="32dp"
                     android:valueFrom="0"
+                    android:stepSize="1.0"
                     android:valueTo="20">
 
                 </com.google.android.material.slider.Slider>
