--- a/app/src/main/res/layout/exo_player_view.xml
+++ b/app/src/main/res/layout/exo_player_view.xml
@@ -56,7 +56,7 @@
 
 <ani.dantotsu.others.Xubtitle
     android:id="@+id/customSubtitleView"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal|bottom"
     android:padding="8dp"
